[FIX] social icon placement on mobile, use right% and restore image padding

--- a/javascript/css/style-mobile.css
+++ b/javascript/css/style-mobile.css
@@ -110,11 +110,12 @@ body, input, textarea, select
 		#header ul
 		{
 			/* display: none;  IO HAVOC for good mobile layout */
-			left:60%;
+			/*  left:60%; */
+			right: 0%;
 			position: absolute;
 			border-radius: 1em;
 			display: inline-block;
-			padding: 0.15em 0em 0.15em 0.55em;
+			padding: 0.15em 0.55em 0.15em 0.55em;
 			font-size: 1.0em;
 			margin: 0 0 0 0;
 			bottom:5%;
